--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ buildscript {
         google()
         jcenter()
         maven {
-            url "https://maven.google.com" // Google's Maven repository
+            url "https://maven.google.com"
+            name 'Google'
         }
         mavenCentral()
     }
